--- a/examples/common/templates/pv_pvc.yaml
+++ b/examples/common/templates/pv_pvc.yaml
@@ -30,5 +30,5 @@ spec:
     requests:
       storage: {{$definition.storage}}
   volumeName: {{$definition.pvname}}
-  storageClassName: ""
+  storageClassName: "openebs-kernel-nfs"
 {{- end }}
