--- a/examples/pgconfig-acl/values.yaml
+++ b/examples/pgconfig-acl/values.yaml
@@ -82,9 +82,13 @@ geoservercloud:
       hostGroups:
         host1:
           tls:
-            enabled: false
+            enabled: true
           hosts:
-            - gscloud.local
+            - geo.ww5.warwide.com
+          annotations:   # Aggiungi questa sezione se non esiste già
+            cert-manager.io/cluster-issuer: "letsencrypt-prod"
+            nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+            nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
     services:
       gateway:
         ingress:
