--- a/examples/pgconfig-acl/values.yaml
+++ b/examples/pgconfig-acl/values.yaml
@@ -80,8 +80,8 @@ geoservercloud:
     ingress:
       annotations:   # Aggiungi questa sezione se non esiste già
         cert-manager.io/cluster-issuer: "letsencrypt-prod"
-        nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+        #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+        #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
       enabled: true
       hostGroups:
         host1:
@@ -94,8 +94,8 @@ geoservercloud:
         service:
           annotations:   # Aggiungi questa sezione se non esiste già
             cert-manager.io/cluster-issuer: "letsencrypt-prod"
-            nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-            nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+            #nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+            #nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
         ingress:
           enabled: true
         <<: *additional-stuff
